# coding-exercise

./: README.md  main.py  pyproject.toml
models/: __init__.py  models.py
repositories/: __init__.py  repository.py
routes/jobs/: dtos.py  endpoints.py
services/: __init__.py  service.py
